# weaverun

./: README.md  pyproject.toml  requirements.txt  weaverun.config.example.yaml
weaverun/: __init__.py  cli.py  config.py  dashboard.py  detect.py  proxy.py  trace_context.py  upstream.py  weave_log.py
weaverun/templates/: base.html  dashboard.html
