[project]
name = "weaverun"
version = "0.1.0"
description = "Run any app and capture LLM API traffic to Weave (OpenAI, Anthropic, Gemini, Bedrock, Azure, and more)"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "typer",
  "weave",
  "python-dotenv",
  "pyyaml",
]

[project.scripts]
weaverun = "weaverun.cli:app"
